Updated portfolio contents

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <header class="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="image/IMG-20240227-WA0025.jpg" alt="Rahul Balijapally" class="profile-pic" data-aos="fade-right" data-aos-duration="1500">
+                <img src="image\IMG_20240225_002905.jpg" alt="Rahul Balijapally" class="profile-pic" data-aos="fade-right" data-aos-duration="1500">
                 <h1 data-aos="fade-up" data-aos-duration="1500">Rahul Balijapally</h1>
-                <p class="subtitle" data-aos="fade-up" data-aos-duration="2000">Software Engineer | Innovator</p>
+                <p class="subtitle" data-aos="fade-up" data-aos-duration="2000">Software Engineer</p>
                 <div class="hero-buttons">
-                    <a href="resume.pdf" download class="btn btn-primary">Download Resume</a>
+                    <a href="Rahul_Balijapally_Resume.pdf" download class="btn btn-primary">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -61,53 +61,67 @@
                     </div>
                 </div>
                 <div class="about-image" data-aos="fade-left" data-aos-duration="1500">
-                    <img src="image/IMG-20240227-WA0042.jpg" alt="Rahul Balijapally">
+                    <img src="image\IMG_20240225_002905.jpg" alt="Rahul Balijapally">
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">My Projects</h2>
-            <p class="section-description" data-aos="fade-up" data-aos-duration="1500">A showcase of my work, demonstrating my skills and creativity in various domains.</p>
+            <p class="section-description" data-aos="fade-up" data-aos-duration="1500">
+                Explore my work across multiple domains, showcasing my expertise in data analysis, system automation, and interactive web applications.
+            </p>
             <div class="portfolio-grid">
-                <!-- Portfolio Item -->
-                <div class="portfolio-item" style="background-image: url('https://source.unsplash.com/600x400/?data-analysis');" data-aos="zoom-in" data-aos-duration="1500">
+                <!-- Project Template -->
+                <div class="portfolio-item" data-aos="zoom-in" data-aos-duration="1500">
+                    <div class="portfolio-thumbnail">
+                        <img src="https://source.unsplash.com/600x400/?data-analysis" alt="NEET Data Analysis">
+                    </div>
                     <div class="portfolio-info">
                         <h3>NEET Data Analysis</h3>
-                        <p>Analyzed NEET data trends to provide actionable insights for educational institutions.</p>
-                        <a href="https://github.com/rahulj444/neet-data-analysis" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                        <p>Leveraged Python and Pandas to analyze NEET data trends, offering insights for educational institutions.</p>
+                        <a href="https://github.com/rahulj444/neet-data-analysis" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
                 <!-- Portfolio Item -->
-                <div class="portfolio-item" style="background-image: url('https://source.unsplash.com/600x400/?pharmacy,technology');" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="portfolio-item" data-aos="zoom-in" data-aos-duration="1500">
+                    <div class="portfolio-thumbnail">
+                        <img src="https://source.unsplash.com/600x400/?pharmacy,technology" alt="Pharmacy Management System">
+                    </div>
                     <div class="portfolio-info">
                         <h3>Pharmacy Management System</h3>
-                        <p>Designed and developed a system to streamline pharmacy operations.</p>
-                        <a href="https://github.com/rahulj444/pharmacy-management-system" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                        <p>Designed an automated system for efficient pharmacy inventory management and billing.</p>
+                        <a href="https://github.com/rahulj444/pharmacy-management-system" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
                 <!-- Portfolio Item -->
-                <div class="portfolio-item" style="background-image: url('https://source.unsplash.com/600x400/?fire,technology');" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="portfolio-item" data-aos="zoom-in" data-aos-duration="1500">
+                    <div class="portfolio-thumbnail">
+                        <img src="https://source.unsplash.com/600x400/?fire,technology" alt="Fire Detection System">
+                    </div>
                     <div class="portfolio-info">
                         <h3>Fire Detection System</h3>
-                        <p>Built a real-time system using OpenCV to detect and alert for fire hazards.</p>
-                        <a href="https://github.com/rahulj444/fire-detection-system" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                        <p>Developed a real-time fire detection system using OpenCV and machine learning algorithms.</p>
+                        <a href="https://github.com/rahulj444/fire-detection-system" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
                 <!-- Portfolio Item -->
-                <div class="portfolio-item" style="background-image: url('https://source.unsplash.com/600x400/?resort,travel');" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="portfolio-item" data-aos="zoom-in" data-aos-duration="1500">
+                    <div class="portfolio-thumbnail">
+                        <img src="https://source.unsplash.com/600x400/?resort,travel" alt="Resort Booking System">
+                    </div>
                     <div class="portfolio-info">
                         <h3>Resort Booking System</h3>
-                        <p>Created a front-end interface for an online resort booking platform.</p>
-                        <a href="https://github.com/rahulj444/resort-booking-system" target="_blank" class="btn btn-secondary">View on GitHub</a>
+                        <p>Built a responsive front-end for an intuitive and seamless resort booking experience.</p>
+                        <a href="https://github.com/rahulj444/resort-booking-system" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- Education Section -->
     <section id="education" class="education">
